add option to read raw text from file

--- a/src/config/nlp_config.toml
+++ b/src/config/nlp_config.toml
@@ -1,5 +1,7 @@
 
 [files]
+text_file = "../nlp/raw_text.txt"
 opm_file = "../nlp/pump_opl.html"
 cause_effect_keywords_file = "../nlp/cause_effect_keywords.csv"
 status_keywords_file = "../nlp/health_status_keywords.csv"
+output_health_status_file = "../nlp/output_health_status.csv"
