--- a/src/config/nlp_config.toml
+++ b/src/config/nlp_config.toml
@@ -10,3 +10,4 @@ status_keywords_file.positive = "../nlp/health_status_keywords_positive.csv"
 status_keywords_file.neutral = "../nlp/health_status_keywords_neutral.csv"
 
 output_health_status_file = "../nlp/output_health_status.csv"
+output_causal_effect_file = "../nlp/output_causal_effect.csv"
