--- a/src/nlp/config/nlp_config.toml
+++ b/src/nlp/config/nlp_config.toml
@@ -1,6 +1,7 @@
 
 [files]
-text_file = "../tests/excavator/excavator.txt"
+# text_file = "../tests/excavator/excavator.txt"
+text_file = "../tests/excavator/excavator_shortlist.txt"
 entity_file = "../tests/excavator/excavator_entities.csv"
 cause_effect_keywords_file = "../data/cause_effect_keywords.csv"
 conjecture_keywords_file = "../data/conjecture_keywords.csv"
